# cennznet-runtime-template

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: fee.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  cli.rs  main.rs  service.rs
