[package]
authors = ['Centrality Developers <support@centrality.ai>']
edition = '2018'
name = 'cennznet-runtime-template-runtime'
version = '1.0.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    'generic-asset/std',
    'fees/std',
    'cennzx-spot/std',
    'cennznet-primitives/std'
]
[dependencies.aura]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-aura'
branch = 'stable'

[dependencies.balances]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-balances'
branch = 'stable'

[dependencies.client]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'substrate-client'
branch = 'stable'

[dependencies.consensus]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-consensus'
branch = 'stable'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'substrate-consensus-aura-primitives'
branch = 'stable'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'substrate-consensus-authorities'
branch = 'stable'

[dependencies.executive]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-executive'
branch = 'stable'

[dependencies.indices]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-indices'
branch = 'stable'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'substrate-offchain-primitives'
branch = 'stable'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.primitives]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'substrate-primitives'
branch = 'stable'

[dependencies.rstd]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'sr-std'
branch = 'stable'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'sr-io'
branch = 'stable'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'sr-primitives'
branch = 'stable'

[dependencies.version]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'sr-version'
branch = 'stable'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-sudo'
branch = 'stable'

[dependencies.support]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-support'
branch = 'stable'

[dependencies.system]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-system'
branch = 'stable'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/cennznet/plug-blockchain.git'
package = 'srml-timestamp'
branch = 'stable'

[dependencies.cennznet-primitives]
default_features = false
git = 'https://github.com/cennznet/cennznet.git'
package = 'cennznet-primitives'
branch = 'stable'

[dependencies.generic-asset]
default_features = false
git = 'https://github.com/cennznet/cennznet.git'
package = 'prml-generic-asset'
branch = 'stable'

[dependencies.fees]
default_features = false
git = 'https://github.com/cennznet/cennznet.git'
package = 'prml-fees'
branch = 'stable'

[dependencies.cennzx-spot]
default_features = false
git = 'https://github.com/cennznet/cennznet.git'
package = 'crml-cennzx-spot'
branch = 'stable'

